{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 1319,
  "lineage": "d26f3497-504b-211c-5d05-2986270c7b54",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008fa141f0cfeb96b",
            "association_id": "eipassoc-0928bdb2b16355e72",
            "domain": "vpc",
            "id": "eipalloc-008fa141f0cfeb96b",
            "instance": "i-0863227a13bebd566",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a9233f2bd78fb353",
            "private_dns": "ip-10-0-208-74.ec2.internal",
            "private_ip": "10.0.208.74",
            "public_dns": "ec2-52-72-117-246.compute-1.amazonaws.com",
            "public_ip": "52.72.117.246",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bastion_eip"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "bastion_eip",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_availability_zones.available",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7d549fcb7988cad",
            "domain": "vpc",
            "id": "eipalloc-0c7d549fcb7988cad",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-206-165-203.compute-1.amazonaws.com",
            "public_ip": "44.206.165.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gw_eip"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "gw_eip",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fff6247b994aa99",
            "association_id": "eipassoc-07a49d768c9dd2600",
            "domain": "vpc",
            "id": "eipalloc-09fff6247b994aa99",
            "instance": "i-0f82a819653ac35f6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c970b2bef0a0d900",
            "private_dns": "ip-10-0-186-207.ec2.internal",
            "private_ip": "10.0.186.207",
            "public_dns": "ec2-3-232-139-230.compute-1.amazonaws.com",
            "public_ip": "3.232.139.230",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "web_eip"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "web_eip",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_instance.web",
            "aws_key_pair.generated_key",
            "aws_security_group.bastion_sg",
            "aws_security_group.front_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_availability_zones.available",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:335809563306:instance/i-01780b6886a116ff0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01780b6886a116ff0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "guranchik_project_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09cdc82c0bf439093",
            "private_dns": "ip-10-0-7-192.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.7.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b0b9aaae3836a3c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4762cf619f9b70f",
            "tags": {
              "Name": "app"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "app",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-044309538c3d106b3"
            ]
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_instance.web",
            "aws_key_pair.generated_key",
            "aws_security_group.app_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.front_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_availability_zones.available",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:335809563306:instance/i-0863227a13bebd566",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0863227a13bebd566",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "guranchik-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a9233f2bd78fb353",
            "private_dns": "ip-10-0-208-74.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.208.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03dc99893c6d6547a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04578ef9ec53dd07e",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "bastion",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0131f7692947130b9"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_availability_zones.available",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:335809563306:instance/i-0bdb76bb1ec1ee4de",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bdb76bb1ec1ee4de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "guranchik_project_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06fdc01bc62db7945",
            "private_dns": "ip-10-0-86-174.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.86.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03dd42a50b665f8b5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4762cf619f9b70f",
            "tags": {
              "Name": "db"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "db",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e90d634ec01e9d90"
            ]
          },
          "dependencies": [
            "aws_instance.app",
            "aws_instance.bastion",
            "aws_instance.web",
            "aws_key_pair.generated_key",
            "aws_security_group.app_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.db_sg",
            "aws_security_group.front_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_availability_zones.available",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:335809563306:instance/i-0f82a819653ac35f6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f82a819653ac35f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "guranchik_project_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c970b2bef0a0d900",
            "private_dns": "ip-10-0-186-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.186.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059223d316e6bf615",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04578ef9ec53dd07e",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "web",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d54b8200378be32"
            ]
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_key_pair.generated_key",
            "aws_security_group.bastion_sg",
            "aws_security_group.front_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_availability_zones.available",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335809563306:internet-gateway/igw-0cbfb0247263d1644",
            "id": "igw-0cbfb0247263d1644",
            "owner_id": "335809563306",
            "tags": {
              "Name": "gw"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "gw",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "vpc_id": "vpc-0020252513f692384"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7d549fcb7988cad",
            "connectivity_type": "public",
            "id": "nat-07aa042c50d3e3f0e",
            "network_interface_id": "eni-0109158961c0721f0",
            "private_ip": "10.0.138.189",
            "public_ip": "44.206.165.203",
            "subnet_id": "subnet-04578ef9ec53dd07e",
            "tags": {
              "Name": "nat_gw"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "nat_gw",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            }
          },
          "dependencies": [
            "aws_eip.gw_eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cbfb0247263d1644",
            "id": "r-rtb-05afc3abd6b2322a21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05afc3abd6b2322a2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03e675dcd8c79d3501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07aa042c50d3e3f0e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e675dcd8c79d350",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335809563306:route-table/rtb-03e675dcd8c79d350",
            "id": "rtb-03e675dcd8c79d350",
            "owner_id": "335809563306",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "private_rt",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "timeouts": null,
            "vpc_id": "vpc-0020252513f692384"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335809563306:route-table/rtb-0dc85081b3f4b0377",
            "id": "rtb-0dc85081b3f4b0377",
            "owner_id": "335809563306",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cbfb0247263d1644",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "public_rt",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "timeouts": null,
            "vpc_id": "vpc-0020252513f692384"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acd1af8c381f5fae",
            "route_table_id": "rtb-03e675dcd8c79d350",
            "subnet_id": "subnet-0e4762cf619f9b70f"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cb68187ebc9dcbb",
            "route_table_id": "rtb-05afc3abd6b2322a2",
            "subnet_id": "subnet-04578ef9ec53dd07e"
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335809563306:security-group/sg-044309538c3d106b3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044309538c3d106b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.186.207/32"
                ],
                "description": "HTTP allow to front",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.208.74/32"
                ],
                "description": "SSH allow to app",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app_sg",
            "name_prefix": "",
            "owner_id": "335809563306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app_sg"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "app_sg",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "timeouts": null,
            "vpc_id": "vpc-0020252513f692384"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.bastion",
            "aws_instance.web",
            "aws_key_pair.generated_key",
            "aws_security_group.bastion_sg",
            "aws_security_group.front_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_availability_zones.available",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335809563306:security-group/sg-0131f7692947130b9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0131f7692947130b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH allow to bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "335809563306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_sg"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "bastion_sg",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "timeouts": null,
            "vpc_id": "vpc-0020252513f692384"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335809563306:security-group/sg-0e90d634ec01e9d90",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e90d634ec01e9d90",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.208.74/32"
                ],
                "description": "SSH allow to front",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.7.192/32"
                ],
                "description": "5432 allow to db",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "335809563306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db_sg"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "db_sg",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "timeouts": null,
            "vpc_id": "vpc-0020252513f692384"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.app",
            "aws_instance.bastion",
            "aws_instance.web",
            "aws_key_pair.generated_key",
            "aws_security_group.app_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.front_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_availability_zones.available",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335809563306:security-group/sg-05d54b8200378be32",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d54b8200378be32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP allow to front",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS allow to front",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.208.74/32"
                ],
                "description": "SSH allow to front",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "front_sg",
            "name_prefix": "",
            "owner_id": "335809563306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "front_sg"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "front_sg",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "timeouts": null,
            "vpc_id": "vpc-0020252513f692384"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.latest_amazon_linux",
            "data.aws_availability_zones.available",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335809563306:subnet/subnet-0e4762cf619f9b70f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/17",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4762cf619f9b70f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335809563306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "Private Subnet 1",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "vpc_id": "vpc-0020252513f692384"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335809563306:subnet/subnet-04578ef9ec53dd07e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/17",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04578ef9ec53dd07e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335809563306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "Public Subnet 1",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            },
            "vpc_id": "vpc-0020252513f692384"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335809563306:vpc/vpc-0020252513f692384",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07f896c7f41bbea9f",
            "default_route_table_id": "rtb-05afc3abd6b2322a2",
            "default_security_group_id": "sg-09601b7605beaf8b0",
            "dhcp_options_id": "dopt-0d4f27337074e6c30",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0020252513f692384",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05afc3abd6b2322a2",
            "owner_id": "335809563306",
            "tags": {
              "Name": "guranchik_vpc"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "guranchik_vpc",
              "Owner": "Guranchik",
              "Project": "Terraform-L42"
            }
          }
        }
      ]
    }
  ]
}